--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
       <div class="footer-section">
         <h4>Links Úteis</h4>
         <ul>
-          <li><a href="termos.html">Termos de Uso</a></li>
-          <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
+          <li><a href="sobre.html">Termos de Uso</a></li>
+          <li><a href="sobre.html">Política de Privacidade</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
         </ul>
