--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
   <meta property="og:image" content="https://www.centrodecompra.com/logos/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@ComprasCdc" />
-
-  <!-- Google Ads -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io;
+    style-src 'self' https://cdnjs.cloudflare.com;
+    img-src 'self' data: https://www.centrodecompra.com https://*.amazon.com https://*.mercadolivre.com https://*.shopee.com https://*.magazineluiza.com.br https://*.shein.com https://*.alibaba.com https://*.aliexpress.com;
+    connect-src 'self' https://*.googleapis.com https://*.doubleclick.net https://*.google.com https://*.socket.io;
+    font-src 'self' https://cdnjs.cloudflare.com;
+    object-src 'none';
+    frame-src 'self' https://*.google.com;
+    base-uri 'self';
+    form-action 'self';
+    manifest-src 'self';
+  " />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
-
-  <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <!-- Estilos -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="preload" href="style.css" as="style" />
-
-  <!-- Ícones -->
   <link rel="icon" href="logos/favicon.ico" type="image/x-icon" />
   <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png" />
@@ -33,6 +37,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="logos/android-chrome-192x192.png" />
   <link rel="icon" type="image/png" sizes="512x512" href="logos/android-chrome-512x512.png" />
   <link rel="manifest" href="logos/site.webmanifest" />
+  <link rel="preload" href="style.css" as="style" />
 </head>
 <body>
   <header class="main-header">
@@ -52,19 +57,17 @@
         </div>
       </div>
     </div>
-
     <!-- Banner Ad no Topo -->
     <div class="ad-container">
-      <ins class="adsbygoogle ads-block"
+      <ins class="adsbygoogle"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="1234567890"
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <div class="ad-fallback">
         <p>Anúncio não disponível no momento.</p>
       </div>
     </div>
-
     <div class="header-main">
       <div class="container header-content">
         <h1 class="site-title">Centro de Compra</h1>
@@ -80,7 +83,6 @@
         </div>
       </div>
     </div>
-
     <nav class="main-nav">
       <div class="container nav-content">
         <button class="categories-btn" id="categories-toggle" aria-label="Abrir menu de categorias"><i class="fas fa-bars"></i> Categorias</button>
@@ -93,13 +95,30 @@
       </div>
     </nav>
   </header>
-
   <aside class="categories-sidebar" id="categories-sidebar" role="navigation" aria-label="Menu de categorias">
-    <!-- categorias ... -->
+    <div class="sidebar-header">
+      <h3><i class="fas fa-list"></i> Categorias</h3>
+      <button class="close-sidebar" id="close-sidebar" aria-label="Fechar menu de categorias"><i class="fas fa-times"></i></button>
+    </div>
+    <ul class="categories-list">
+      <li class="category-item active" data-categoria="todas" aria-label="Filtrar por todas as categorias"><i class="fas fa-th"></i> Todas</li>
+      <li class="category-item" data-categoria="eletronicos" aria-label="Filtrar por eletrônicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
+      <li class="category-item" data-categoria="moda" aria-label="Filtrar por moda"><i class="fas fa-tshirt"></i> Moda</li>
+      <li class="category-item" data-categoria="casa-e-decoracao" aria-label="Filtrar por casa e decoração"><i class="fas fa-home"></i> Casa e Decoração</li>
+      <li class="category-item" data-categoria="esportes" aria-label="Filtrar por esportes"><i class="fas fa-futbol"></i> Esportes</li>
+      <li class="category-item" data-categoria="beleza" aria-label="Filtrar por beleza"><i class="fas fa-spa"></i> Beleza</li>
+      <li class="category-item" data-categoria="livros" aria-label="Filtrar por livros"><i class="fas fa-book"></i> Livros</li>
+      <li class="category-item" data-categoria="brinquedos" aria-label="Filtrar por brinquedos"><i class="fas fa-gamepad"></i> Brinquedos</li>
+      <li class="category-item" data-categoria="saude" aria-label="Filtrar por saúde"><i class="fas fa-heartbeat"></i> Saúde</li>
+      <li class="category-item" data-categoria="automotivo" aria-label="Filtrar por automotivo"><i class="fas fa-car"></i> Automotivo</li>
+      <li class="category-item" data-categoria="alimentos" aria-label="Filtrar por alimentos"><i class="fas fa-utensils"></i> Alimentos</li>
+      <li class="category-item" data-categoria="pet-shop" aria-label="Filtrar por pet shop"><i class="fas fa-paw"></i> Pet Shop</li>
+      <li class="category-item" data-categoria="celulares" aria-label="Filtrar por celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
+      <li class="category-item" data-categoria="eletrodomesticos" aria-label="Filtrar por eletrodomésticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
+      <li class="category-item" data-categoria="infantil" aria-label="Filtrar por infantil"><i class="fas fa-baby"></i> Infantil</li>
+    </ul>
   </aside>
-
   <div class="overlay" id="overlay"></div>
-
   <main class="main-content">
     <section class="offers-banner" id="inicio">
       <div class="container banner-content">
@@ -109,34 +128,175 @@
         </div>
       </div>
     </section>
-
     <!-- Banner Ad na Seção de Ofertas -->
     <div class="ad-container">
-      <ins class="adsbygoogle ads-block"
+      <ins class="adsbygoogle"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="9876543210"
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <div class="ad-fallback">
         <p>Anúncio não disponível no momento.</p>
       </div>
     </div>
-
-    <!-- Seção Lojas + Produtos... (mantive igual ao seu, apenas limpei os inline) -->
-
+    <section class="stores-section" id="lojas">
+      <div class="container">
+        <div class="section-header">
+          <div>
+            <h2><i class="fas fa-store"></i> Lojas Parceiras</h2>
+            <p>Explore produtos das lojas mais confiáveis</p>
+          </div>
+        </div>
+        <div class="stores-grid">
+          <div class="store-card active" data-loja="todas" data-tooltip="Ver produtos de todas as lojas">
+            <i class="fas fa-th store-icon"></i>
+            <div class="store-name">Todas</div>
+          </div>
+          <div class="store-card" data-loja="amazon" data-tooltip="Líder em eletrônicos e livros">
+            <img src="logos/amazon.png" alt="Amazon" class="store-logo" />
+            <div class="store-name">Amazon</div>
+          </div>
+          <div class="store-card" data-loja="mercadolivre" data-tooltip="Marketplace com ampla variedade">
+            <img src="logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" />
+            <div class="store-name">Mercado Livre</div>
+          </div>
+          <div class="store-card" data-loja="shopee" data-tooltip="Ofertas em moda e acessórios">
+            <img src="logos/shopee.png" alt="Shopee" class="store-logo" />
+            <div class="store-name">Shopee</div>
+          </div>
+          <div class="store-card" data-loja="magalu" data-tooltip="Loja completa para casa e tecnologia">
+            <img src="logos/magalu.png" alt="Magalu" class="store-logo" />
+            <div class="store-name">Magalu</div>
+          </div>
+          <div class="store-card" data-loja="shein" data-tooltip="Moda acessível e variada">
+            <img src="logos/shein.png" alt="Shein" class="store-logo" />
+            <div class="store-name">Shein</div>
+          </div>
+          <div class="store-card" data-loja="alibaba" data-tooltip="Produtos direto da China">
+            <img src="logos/alibaba.png" alt="Alibaba" class="store-logo" />
+            <div class="store-name">Alibaba</div>
+          </div>
+          <div class="store-card" data-loja="aliexpress" data-tooltip="Ofertas internacionais com frete acessível">
+            <img src="logos/aliexpress.png" alt="AliExpress" class="store-logo" />
+            <div class="store-name">AliExpress</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="products-section" id="ofertas">
+      <div class="container">
+        <div class="section-header">
+          <h2 id="ofertas-titulo">Produtos em Destaque</h2>
+        </div>
+        <!-- Banner Ad na Seção de Produtos -->
+        <div class="ad-container">
+          <ins class="adsbygoogle"
+               data-ad-client="ca-pub-9781903408224276"
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <div class="ad-fallback">
+            <p>Anúncio não disponível no momento.</p>
+          </div>
+        </div>
+        <div class="loading-container" id="loading-spinner">
+          <div class="loading-spinner">
+            <div class="spinner"></div>
+            <p>Carregando produtos...</p>
+          </div>
+        </div>
+        <div class="empty-state" id="mensagem-vazia">
+          <i class="fas fa-box-open empty-icon"></i>
+          <h3>Nenhum produto encontrado</h3>
+          <p>Tente ajustar os filtros ou a busca.</p>
+          <a href="#" class="btn-primary" onclick="window.location.reload()"><i class="fas fa-redo"></i> Limpar Filtros</a>
+        </div>
+        <div class="error-state" id="error-message">
+          <i class="fas fa-exclamation-circle error-icon"></i>
+          <h3>Ops! Algo deu errado</h3>
+          <p>Não foi possível carregar os produtos.</p>
+          <a href="#" class="btn-primary" onclick="window.location.reload()"><i class="fas fa-redo"></i> Tentar Novamente</a>
+        </div>
+        <div class="products-grid" id="grid-produtos"></div>
+        <div id="pagination-controls"></div>
+        <div class="load-more-container">
+          <button class="load-more-btn" id="load-more"><i class="fas fa-plus"></i> Ver Mais</button>
+        </div>
+      </div>
+    </section>
   </main>
-
   <footer class="main-footer" id="contato">
-    <!-- rodapé igual ao seu -->
+    <div class="container footer-content">
+      <div class="footer-section">
+        <h4>Sobre Nós</h4>
+        <p>Centro de Compra reúne as melhores ofertas de lojas online confiáveis. Economize tempo e dinheiro!</p>
+      </div>
+      <div class="footer-section">
+        <h4>Links Úteis</h4>
+        <ul>
+          <li><a href="sobre.html">Termos de Uso</a></li>
+          <li><a href="sobre.html">Política de Privacidade</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="contato.html">Suporte</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Siga-nos</h4>
+        <div class="social-links">
+          <a href="https://www.instagram.com/cdccentrodecompra/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
+            <img src="logos/instagram.png" alt="Instagram" class="social-icon" />
+          </a>
+          <a href="https://x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
+            <img src="logos/X.png" alt="X" class="social-icon" />
+          </a>
+          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
+            <img src="logos/youtube.png" alt="YouTube" class="social-icon" />
+          </a>
+          <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
+            <img src="logos/tiktok.png" alt="TikTok" class="social-icon" />
+          </a>
+          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
+            <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
+          </a>
+          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
+            <img src="logos/kwai.png" alt="Kwai" class="social-icon" />
+          </a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h4>Formas de Pagamento</h4>
+        <div class="payment-methods">
+          <img src="logos/visa.png" alt="Visa" class="payment-icon" />
+          <img src="logos/mastercard.png" alt="Mastercard" class="payment-icon" />
+          <img src="logos/boleto.png" alt="Boleto" class="payment-icon" />
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="footer-disclaimer">
+          <p><i class="fas fa-info-circle"></i> Aviso: Este site participa de programas de afiliados. Ao realizar compras por meio dos nossos links, podemos receber uma comissão sem custo adicional para você.</p>
+        </div>
+        <div class="footer-copyright">
+          <p>&copy; <span id="year">2025</span> Centro de Compra. Todos os direitos reservados.</p>
+        </div>
+      </div>
+    </div>
   </footer>
-
-  <!-- Modal -->
   <div class="image-modal" id="imageModal" role="dialog" aria-modal="true">
-    <!-- modal igual ao seu -->
+    <div class="modal-backdrop"></div>
+    <div class="modal-container">
+      <button class="modal-close" id="modal-close" aria-label="Fechar modal"><i class="fas fa-times"></i></button>
+      <div class="modal-carousel">
+        <div class="carousel-images" id="modalCarrosselImagens"></div>
+        <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button>
+        <button class="carousel-btn next" id="modalNext"><i class="fas fa-chevron-right"></i></button>
+        <div class="carousel-dots" id="modalCarrosselDots"></div>
+      </div>
+    </div>
   </div>
-
-  <!-- Scripts externos -->
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="script.js"></script>
+  <script src="ads.js"></script>
 </body>
 </html>
