--- a/index.html
+++ b/index.html
@@ -7,26 +7,10 @@
   <meta name="description" content="As melhores ofertas de lojas online em um só lugar. Filtre por categoria, loja ou busque produtos com descontos!" />
   <meta name="keywords" content="e-commerce, compras online, ofertas, descontos, lojas" />
   <meta name="author" content="Centro de Compra" />
-  <meta name="robots" content="index, follow" />
   <meta property="og:title" content="Centro de Compra - Ofertas Online" />
   <meta property="og:description" content="Encontre as melhores ofertas de lojas confiáveis em um só lugar." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://www.centrodecompra.com/logos/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@ComprasCdc" />
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io;
-    style-src 'self' https://cdnjs.cloudflare.com;
-    img-src 'self' data: https://www.centrodecompra.com https://*.amazon.com https://*.mercadolivre.com https://*.shopee.com https://*.magazineluiza.com.br https://*.shein.com https://*.alibaba.com https://*.aliexpress.com;
-    connect-src 'self' https://*.googleapis.com https://*.doubleclick.net https://*.google.com https://*.socket.io;
-    font-src 'self' https://cdnjs.cloudflare.com;
-    object-src 'none';
-    frame-src 'self' https://*.google.com;
-    base-uri 'self';
-    form-action 'self';
-    manifest-src 'self';
-  " />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
@@ -44,28 +28,18 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
+          <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
           <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
-          <a href="cupom.html" class="header-link" aria-label="Cupons"><i class="fas fa-tags"></i> Cupons</a>
-          <a href="https://www.instagram.com/cdccentrodecompra/" class="header-link social-link" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://x.com/ComprasCdc" class="header-link social-link" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
-          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="header-link social-link" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-          <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="header-link social-link" target="_blank" rel="noopener" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="header-link social-link" target="_blank" rel="noopener" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="header-link social-link" target="_blank" rel="noopener" aria-label="Kwai"><i class="fas fa-video"></i></a>
+          <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
+          <a href="https://www.instagram.com/cdccentrodecompra/" class="header-link" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/ComprasCdc" class="header-link" target="_blank" rel="noopener" aria-label="X"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.youtube.com/@CentrodeComprasCdC" class="header-link" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="header-link" target="_blank" rel="noopener" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+          <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="header-link" target="_blank" rel="noopener" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+          <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="header-link" target="_blank" rel="noopener" aria-label="Kwai"><i class="fas fa-video"></i></a>
         </div>
-      </div>
-    </div>
-    <!-- Banner Ad no Topo -->
-    <div class="ad-container">
-      <ins class="adsbygoogle"
-           data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <div class="ad-fallback">
-        <p>Anúncio não disponível no momento.</p>
       </div>
     </div>
     <div class="header-main">
@@ -128,17 +102,6 @@
         </div>
       </div>
     </section>
-    <!-- Banner Ad na Seção de Ofertas -->
-    <div class="ad-container">
-      <ins class="adsbygoogle"
-           data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <div class="ad-fallback">
-        <p>Anúncio não disponível no momento.</p>
-      </div>
-    </div>
     <section class="stores-section" id="lojas">
       <div class="container">
         <div class="section-header">
@@ -188,16 +151,16 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
-        <!-- Banner Ad na Seção de Produtos -->
-        <div class="ad-container">
+        <div class="ad-container" style="margin: 20px auto; text-align: center;">
           <ins class="adsbygoogle"
+               style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+               data-ad-slot="YOUR_AD_SLOT_ID"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
-          <div class="ad-fallback">
-            <p>Anúncio não disponível no momento.</p>
-          </div>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
@@ -234,7 +197,7 @@
       <div class="footer-section">
         <h4>Links Úteis</h4>
         <ul>
-          <li><a href="sobre.html">Termos de Uso</a></li>
+          <li><a href="#termos">Termos de Uso</a></li>
           <li><a href="sobre.html">Política de Privacidade</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
@@ -275,10 +238,10 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-disclaimer">
-          <p><i class="fas fa-info-circle"></i> Aviso: Este site participa de programas de afiliados. Ao realizar compras por meio dos nossos links, podemos receber uma comissão sem custo adicional para você.</p>
+          <p><i class="fas fa-info-circle"></i> Aviso: Somos um site de afiliados. Ao comprar pelos nossos links, podemos receber comissão, mas o preço é o mesmo para você, sem custo extra.</p>
         </div>
         <div class="footer-copyright">
-          <p>&copy; <span id="year">2025</span> Centro de Compra. Todos os direitos reservados.</p>
+          <p>&copy; <span id="year">2025</span> Centro de Compra.</p>
         </div>
       </div>
     </div>
@@ -297,6 +260,16 @@
   </div>
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script src="script.js"></script>
-  <script src="ads.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("year").textContent = new Date().getFullYear();
+      const cssLink = document.querySelector('link[href="style.css"]');
+      if (cssLink && cssLink.sheet) {
+        console.log("CSS carregado com sucesso.");
+      } else {
+        console.warn("CSS não carregado. Verifique o caminho do arquivo style.css.");
+      }
+    });
+  </script>
 </body>
 </html>
