--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="1234567890" <!-- Substitua pelo valor correto do Google AdSense -->
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo valor correto do Google AdSense -->
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -131,7 +131,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="1234567891" <!-- Substitua pelo valor correto do Google AdSense -->
+           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo valor correto do Google AdSense -->
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -195,7 +195,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="1234567892" <!-- Substitua pelo valor correto do Google AdSense -->
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo valor correto do Google AdSense -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
