--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+           data-ad-slot="YOUR_AD_SLOT_ID"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
@@ -124,7 +124,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+           data-ad-slot="YOUR_AD_SLOT_ID"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
@@ -185,7 +185,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+               data-ad-slot="YOUR_AD_SLOT_ID"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
