--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-          <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
-          <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
+         
+        <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
           <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
@@ -99,7 +99,7 @@
       <div class="container banner-content">
         <div class="banner-text">
           <h1>Ofertas Exclusivas</h1>
-          <p>Economize até 70% em milhares de produtos das melhores lojas!</p>
+          <p>Economize até 30% em milhares de produtos das melhores lojas!</p>
         </div>
       </div>
     </section>
@@ -156,7 +156,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="1234567890" <!-- Substitua por seu ID real do AdSense -->
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua por seu ID real do AdSense -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
