--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-         
-        <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
+          <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
           <a href="cupom.html" class="header-link"><i class="fas fa-tags"></i> Cupons</a>
@@ -152,11 +151,12 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
-        <div class="ad-container" style="margin: 20px auto; text-align: center;">
+        <div class="products-grid" id="grid-produtos"></div>
+        <div class="ad-container">
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua por seu ID real do AdSense -->
+               data-ad-slot="1234567890" <!-- Substitua pelo seu ID real do AdSense -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
@@ -181,7 +181,6 @@
           <p>Não foi possível carregar os produtos.</p>
           <a href="#" class="btn-primary retry-load"><i class="fas fa-redo"></i> Tentar Novamente</a>
         </div>
-        <div class="products-grid" id="grid-produtos"></div>
         <div id="pagination-controls"></div>
         <div class="load-more-container">
           <button class="load-more-btn" id="load-more"><i class="fas fa-plus"></i> Ver Mais</button>
