--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="https://www.centrodecompra.com/logos/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="16x16" href="https://www.centrodecompra.com/logos/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://www.centrodecompra.com/logos/favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="https://www.centrodecompra.com/logos/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="https://www.centrodecompra.com/logos/android-chrome-192x192.png" />
+  <link rel="icon" href="logos/favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="logos/android-chrome-192x192.png" />
 </head>
 <body>
   <!-- Header Top -->
@@ -106,35 +106,35 @@
     <div class="container">
       <div class="stores-grid">
         <div class="store-card active" data-loja="todas" data-tooltip="Todas as Lojas">
-          <img src="https://www.centrodecompra.com/logos/todas.png" alt="Todas as Lojas" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/todas.png" alt="Todas as Lojas" class="store-logo" loading="lazy">
           <span class="store-name">Todas</span>
         </div>
         <div class="store-card" data-loja="amazon" data-tooltip="Amazon">
-          <img src="https://www.centrodecompra.com/logos/amazon.png" alt="Amazon" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/amazon.png" alt="Amazon" class="store-logo" loading="lazy">
           <span class="store-name">Amazon</span>
         </div>
         <div class="store-card" data-loja="mercadolivre" data-tooltip="Mercado Livre">
-          <img src="https://www.centrodecompra.com/logos/mercadolivre.png" alt="Mercado Livre" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/mercadolivre.png" alt="Mercado Livre" class="store-logo" loading="lazy">
           <span class="store-name">Mercado Livre</span>
         </div>
         <div class="store-card" data-loja="shopee" data-tooltip="Shopee">
-          <img src="https://www.centrodecompra.com/logos/shopee.png" alt="Shopee" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/shopee.png" alt="Shopee" class="store-logo" loading="lazy">
           <span class="store-name">Shopee</span>
         </div>
         <div class="store-card" data-loja="magalu" data-tooltip="Magalu">
-          <img src="https://www.centrodecompra.com/logos/magalu.png" alt="Magalu" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/magalu.png" alt="Magalu" class="store-logo" loading="lazy">
           <span class="store-name">Magalu</span>
         </div>
         <div class="store-card" data-loja="shein" data-tooltip="Shein">
-          <img src="https://www.centrodecompra.com/logos/shein.png" alt="Shein" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/shein.png" alt="Shein" class="store-logo" loading="lazy">
           <span class="store-name">Shein</span>
         </div>
         <div class="store-card" data-loja="alibaba" data-tooltip="Alibaba">
-          <img src="https://www.centrodecompra.com/logos/alibaba.png" alt="Alibaba" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/alibaba.png" alt="Alibaba" class="store-logo" loading="lazy">
           <span class="store-name">Alibaba</span>
         </div>
         <div class="store-card" data-loja="aliexpress" data-tooltip="AliExpress">
-          <img src="https://www.centrodecompra.com/logos/aliexpress.png" alt="AliExpress" class="store-logo" loading="lazy" onerror="this.src='https://www.centrodecompra.com/logos/placeholder.png'">
+          <img src="logos/aliexpress.png" alt="AliExpress" class="store-logo" loading="lazy">
           <span class="store-name">AliExpress</span>
         </div>
       </div>
@@ -213,21 +213,21 @@
         <div class="footer-section">
           <h3>Redes Sociais</h3>
           <div class="social-links">
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/instagram.png" alt="Instagram" class="social-icon" loading="lazy"></a>
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/twitter.png" alt="Twitter" class="social-icon" loading="lazy"></a>
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/youtube.png" alt="YouTube" class="social-icon" loading="lazy"></a>
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/tiktok.png" alt="TikTok" class="social-icon" loading="lazy"></a>
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/telegram.png" alt="Telegram" class="social-icon" loading="lazy"></a>
-            <a href="#" class="social-link"><img src="https://www.centrodecompra.com/logos/kwai.png" alt="Kwai" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/instagram.png" alt="Instagram" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/twitter.png" alt="Twitter" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/youtube.png" alt="YouTube" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/tiktok.png" alt="TikTok" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/telegram.png" alt="Telegram" class="social-icon" loading="lazy"></a>
+            <a href="#" class="social-link"><img src="logos/kwai.png" alt="Kwai" class="social-icon" loading="lazy"></a>
           </div>
         </div>
         <div class="footer-section">
           <h3>Formas de Pagamento</h3>
           <div class="payment-methods">
-            <img src="https://www.centrodecompra.com/logos/visa.png" alt="Visa" class="payment-icon" loading="lazy">
-            <img src="https://www.centrodecompra.com/logos/mastercard.png" alt="Mastercard" class="payment-icon" loading="lazy">
-            <img src="https://www.centrodecompra.com/logos/pix.png" alt="Pix" class="payment-icon" loading="lazy">
-            <img src="https://www.centrodecompra.com/logos/boleto.png" alt="Boleto" class="payment-icon" loading="lazy">
+            <img src="logos/visa.png" alt="Visa" class="payment-icon" loading="lazy">
+            <img src="logos/mastercard.png" alt="Mastercard" class="payment-icon" loading="lazy">
+            <img src="logos/pix.png" alt="Pix" class="payment-icon" loading="lazy">
+            <img src="logos/boleto.png" alt="Boleto" class="payment-icon" loading="lazy">
           </div>
         </div>
       </div>
