--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo seu ID real do AdSense -->
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
@@ -182,9 +182,6 @@
           <a href="#" class="btn-primary retry-load"><i class="fas fa-redo"></i> Tentar Novamente</a>
         </div>
         <div id="pagination-controls"></div>
-        <div class="load-more-container">
-          <button class="load-more-btn" id="load-more"><i class="fas fa-plus"></i> Ver Mais</button>
-        </div>
       </div>
     </section>
   </main>
