--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://www.centrodecompra.com https://minha-api-produtos.onrender.com https://res.cloudinary.com data:; connect-src 'self' https://minha-api-produtos.onrender.com https://ep1.adtrafficquality.google; frame-src 'self' https://googleads.g.doubleclick.net;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://www.centrodecompra.com https://minha-api-produtos.onrender.com https://res.cloudinary.com data:; connect-src 'self' https://minha-api-produtos.onrender.com wss://minha-api-produtos.onrender.com https://ep1.adtrafficquality.google; frame-src 'self' https://googleads.g.doubleclick.net https://ep2.adtrafficquality.google https://www.google.com;">
   <title>Centro de Compra - Ofertas Online</title>
   <meta name="description" content="As melhores ofertas de lojas online em um só lugar. Filtre por categoria, loja ou busque produtos com descontos!" />
   <meta name="keywords" content="e-commerce, compras online, ofertas, descontos, lojas" />
@@ -156,12 +156,10 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+               data-ad-slot="1234567890" <!-- Substitua pelo ID correto do AdSense -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
-          <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <script src="ads.js"></script>
         </div>
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
