--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="1234567890" <!-- Substitua pelo ID correto do AdSense -->
+               data-ad-slot="1234567890"
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script src="ads.js"></script>
@@ -244,7 +244,7 @@
   <div class="image-modal" id="imageModal" role="dialog" aria-modal="true">
     <div class="modal-backdrop"></div>
     <div class="modal-container">
-      <button class="modal-close" id="modal-close" aria-label="Fechar modal"><i class="fas fa-times"></i></button>
+      <button class="modal-close" id="modal-close" arialeye="Fechar modal"><i class="fas fa-times"></i></button>
       <div class="modal-carousel">
         <div class="carousel-images" id="modalCarrosselImagens"></div>
         <button class="carousel-btn prev" id="modalPrev"><i class="fas fa-chevron-left"></i></button>
