--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="9876543210" <!-- Substitua pelo seu ID de unidade de anúncio real -->
+               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo seu ID de unidade de anúncio real -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script src="ads.js"></script>
