--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <meta property="og:description" content="Encontre as melhores ofertas de lojas confiáveis em um só lugar." />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
+  <!-- Conteúdo do ads.txt (crie o arquivo /ads.txt na raiz do domínio com o seguinte conteúdo):
+       google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0
+  -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
@@ -97,7 +100,7 @@
     <section class="offers-banner" id="inicio">
       <div class="container banner-content">
         <div class="banner-text">
-          <h1>Ofertas Exclusivas</h1>
+          <h2>Ofertas Exclusivas</h2>
           <p>Economize até 30% em milhares de produtos das melhores lojas!</p>
         </div>
       </div>
@@ -156,10 +159,10 @@
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0" <!-- Substitua pelo seu ID de unidade de anúncio real -->
+               data-ad-slot="9876543210" <!-- Substitua pelo seu ID de unidade de anúncio real -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
-          <script src="ads.js"></script>
+          <script src="init-ads.js"></script>
         </div>
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
