--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
        google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0
   -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" href="logos/favicon.ico" type="image/x-icon" />
   <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="logos/android-chrome-192x192.png" />
   <link rel="icon" type="image/png" sizes="512x512" href="logos/android-chrome-512x512.png" />
-  <link rel="manifest" href="logos/site.webmanifest" />
+  <link rel="manifest" href="manifest.json" />
   <link rel="preload" href="style.css" as="style" />
 </head>
 <body>
@@ -162,7 +162,7 @@
                data-ad-slot="9876543210" <!-- Substitua pelo seu ID de unidade de anúncio real -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
-          <script src="init-ads.js"></script>
+          <script src="init.js"></script>
         </div>
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
