--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="store-name">Amazon</div>
           </div>
           <div class="store-card" data-loja="mercadolivre" data-tooltip="Marketplace com ampla variedade">
-            <img src="logos/mercadolivre.png" alt="Mercado Livre" class="store-logo" onerror="this.src='logos/placeholder.png'" />
+            <img src="logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" onerror="this.src='logos/placeholder.png'" />
             <div class="store-name">Mercado Livre</div>
           </div>
           <div class="store-card" data-loja="shopee" data-tooltip="Ofertas em moda e acessórios">
