--- a/cupom.html
+++ b/cupom.html
@@ -79,7 +79,7 @@
       { id: 'cupom1', loja: 'Amazon', codigo: 'carregando', imagem: 'logos/amazon.png' },
       { id: 'cupom2', loja: 'Shein', codigo: 'carregando', imagem: 'logos/shein.png' },
       { id: 'cupom3', loja: 'Magalu', codigo: 'carregando', imagem: 'logos/magalu.png' },
-      { id: 'cupom4', loja: 'Mercado Livre', codigo: 'carregando', imagem: 'logos/mercadolivre.jpg' },
+      { id: 'cupom4', loja: 'Mercado Livre', codigo: '#CDCOMPRA10OFF', imagem: 'logos/mercadolivre.jpg' },
       { id: 'cupom5', loja: 'Shopee', codigo: 'carregando', imagem: 'logos/shopee.png' },
       { id: 'cupom6', loja: 'AliExpress', codigo: 'carregando', imagem: 'logos/aliexpress.png' },
       // Adicione mais cupons aqui, por exemplo:
@@ -120,4 +120,5 @@
     renderizarCupons();
   </script>
 </body>
+
 </html>
